--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title></title>
+    <meta http-equiv="refresh" content="0; URL='https://squadracorseelettricaunina.github.io/recruitments.html'" />
+  </head>
+  <body>
+  </body>
+</html>
