--- a/redirect.html
+++ b/redirect.html
@@ -6,7 +6,8 @@
   <body>
     <script>
       var links = {
-        "recruitments": "/recruitments.html"
+        "recruitments": "/recruitments.html",
+        "website": "https://uninacorseeteam.com"
       }
 
       var page = new URL(location).searchParams.get("page")
