--- a/redirect.html
+++ b/redirect.html
@@ -7,7 +7,8 @@
     <script>
       var links = {
         "recruitments": "/recruitments.html",
-        "website": "https://uninacorseeteam.com"
+        "website": "https://uninacorseeteam.com",
+        "brochure": "https://uninacorseeteam.com"
       }
 
       var page = new URL(location).searchParams.get("page")
