--- a/redirect.html
+++ b/redirect.html
@@ -6,9 +6,9 @@
   <body>
     <script>
       var links = {
-        "recruitments": "/recruitments.html",
-        "website": "https://uninacorseeteam.com",
-        "brochure": "https://uninacorseeteam.com"
+        "recruitments": "https://github.com/squadracorseelettricaunina/squadracorseelettricaunina.github.io/raw/master/data/UniNa_Business.pdf",
+        "website": "https://github.com/squadracorseelettricaunina/squadracorseelettricaunina.github.io/raw/master/data/UniNa_Business.pdf",
+        "brochure": "https://github.com/squadracorseelettricaunina/squadracorseelettricaunina.github.io/raw/master/data/UniNa_Business.pdf"
       }
 
       var page = new URL(location).searchParams.get("page")
