Integrazione al precedente

--- a/redirect.html
+++ b/redirect.html
@@ -8,7 +8,8 @@
       var links = {
         "recruitments": "https://github.com/squadracorseelettricaunina/squadracorseelettricaunina.github.io/raw/master/data/UniNa_Business.pdf",
         "website": "https://github.com/squadracorseelettricaunina/squadracorseelettricaunina.github.io/raw/master/data/UniNa_Business.pdf",
-        "brochure": "https://github.com/squadracorseelettricaunina/squadracorseelettricaunina.github.io/raw/master/data/UniNa_Business.pdf"
+        "brochure": "https://github.com/squadracorseelettricaunina/squadracorseelettricaunina.github.io/raw/master/data/UniNa_Business.pdf",
+        "card": "https://github.com/squadracorseelettricaunina/squadracorseelettricaunina.github.io/raw/master/data/UniNa_Business.pdf"
       }
 
       var page = new URL(location).searchParams.get("page")
