--- a/redirect.html
+++ b/redirect.html
@@ -6,10 +6,11 @@
   <body>
     <script>
       var links = {
-        "recruitments": "https://github.com/squadracorseelettricaunina/squadracorseelettricaunina.github.io/raw/master/data/UniNa_Business.pdf",
-        "website": "https://github.com/squadracorseelettricaunina/squadracorseelettricaunina.github.io/raw/master/data/UniNa_Business.pdf",
-        "brochure": "https://github.com/squadracorseelettricaunina/squadracorseelettricaunina.github.io/raw/master/data/UniNa_Business.pdf",
-        "card": "https://github.com/squadracorseelettricaunina/squadracorseelettricaunina.github.io/raw/master/data/UniNa_Business.pdf"
+        "recruitments": "https://github.com/squadracorseelettricaunina/squadracorseelettricaunina.github.io/raw/master/data/UniNa_Business.pdf", /* Locandine */
+        "website": "https://github.com/squadracorseelettricaunina/squadracorseelettricaunina.github.io/raw/master/data/UniNa_Business.pdf",      /* ??? */
+        "brochure": "https://github.com/squadracorseelettricaunina/squadracorseelettricaunina.github.io/raw/master/data/UniNa_Business.pdf",     /* Adesivi */
+        "card": "https://github.com/squadracorseelettricaunina/squadracorseelettricaunina.github.io/raw/master/data/UniNa_Business.pdf",         /* Bigliettino */
+        "rollup": "http://uninacorseeteam.com"                                                                                                   /* Striscione */
       }
 
       var page = new URL(location).searchParams.get("page")
