--- a/redirect.html
+++ b/redirect.html
@@ -6,11 +6,11 @@
   <body>
     <script>
       var links = {
-        "recruitments": "https://github.com/squadracorseelettricaunina/squadracorseelettricaunina.github.io/raw/master/data/UniNa_Business.pdf", /* Locandine */
-        "website": "https://github.com/squadracorseelettricaunina/squadracorseelettricaunina.github.io/raw/master/data/UniNa_Business.pdf",      /* ??? */
-        "brochure": "https://github.com/squadracorseelettricaunina/squadracorseelettricaunina.github.io/raw/master/data/UniNa_Business.pdf",     /* Adesivi */
-        "card": "https://github.com/squadracorseelettricaunina/squadracorseelettricaunina.github.io/raw/master/data/UniNa_Business.pdf",         /* Bigliettino */
-        "rollup": "http://uninacorseeteam.com"                                                                                                   /* Striscione */
+        "recruitments": "https://instagram.com/uninacorseteam?igshid=YmMyMTA2M2Y=", /* Locandine */
+        "website": "https://instagram.com/uninacorseteam?igshid=YmMyMTA2M2Y=",      /* ??? */
+        "brochure": "https://instagram.com/uninacorseteam?igshid=YmMyMTA2M2Y=",     /* Adesivi */
+        "card": "https://instagram.com/uninacorseteam?igshid=YmMyMTA2M2Y=",         /* Bigliettino */
+        "rollup": "https://instagram.com/uninacorseteam?igshid=YmMyMTA2M2Y="                                                                                                   /* Striscione */
       }
 
       var page = new URL(location).searchParams.get("page")
